samples/_failures_safe/1761089709_32f55a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7d662e8.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_c7d662e8.c:167:9: error: expected declaration or statement at end of input
  167 |         case TOKEN_IDENTIFIER:
      |         ^~~~
./samples/SAFE/__tmp_c7d662e8.c:167:9: error: expected declaration or statement at end of input
